# c_utils

./: .gitignore  Readme.md
.github/workflows/: cmake-multi-platform.yml
gui/: example-0.c
tcalender/: CMakeLists.txt  tcal.c  tcal.h
tdel/: CMakeLists.txt  tdel.c
ttime/: CMakeLists.txt  ttime.c
