cmake_minimum_required(VERSION 3.10)

project(tcal)

# Add your source files
add_executable(tcal tcal.c)

# Link any necessary libraries here (if applicable)
# target_link_libraries(tcal <library_name>)

# Optional: Set compiler flags
# set_target_properties(tcal PROPERTIES COMPILE_FLAGS "-Wall -Wextra")
